--- a/index.html
+++ b/index.html
@@ -7,6 +7,12 @@
     <link rel="shortcut icon" href="TemplateData/favicon.ico">
     <link rel="stylesheet" href="TemplateData/style.css">
 
+    <script src="https://unpkg.com/@vkontakte/vk-bridge/dist/browser.min.js"></script>
+
+    <script>
+    vkBridge.send("VKWebAppInit", {});
+    </script>
+
     <script>
         document.addEventListener("touchstart", function(event) {
             event.preventDefault();
